# loci

./: .env.example  .gitignore  CLAUDE.md  README.md  install.sh  pyproject.toml
.loci/: index.md  log.md
.loci/concepts/: okf-memory.md  safety-model.md
.loci/projects/: loci.md
docs/: banner.py
shell/: loci.zsh
src/loci/: __init__.py  __main__.py  agent.py  cli.py  client.py  config.py  onboard.py  safety.py  sandbox.py  ui.py
src/loci/memory/: __init__.py  okf.py  session.py
src/loci/tools/: __init__.py  base.py  fs.py  knowledge.py  shell.py  web.py
tests/: __init__.py  test_fs.py  test_okf.py  test_safety.py  test_sandbox.py  test_web.py
